syntax = "proto3";

service AccountService {
    rpc PostLogin (LoginRequest) returns (LoginReply);
    rpc PostRegister (RegisterRequest) returns (RegisterReply);
}

message LoginRequest{
    string username = 1;
    string password = 2;
}

message LoginReply{
    string response = 1;
}

message RegisterRequest{
    string username = 1;
    string password = 2;
}

message RegisterReply{
    string response = 1;
}


message Empty {}
